feat(Magazine): MagazineTableViewCell 레이아웃 설정

--- a/Travel/Base.lproj/Main.storyboard
+++ b/Travel/Base.lproj/Main.storyboard
@@ -17,25 +17,84 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="223" id="IB2-0n-Ai5">
-                                <rect key="frame" x="0.0" y="50" width="393" height="223"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="travelCell" rowHeight="487" id="IB2-0n-Ai5" customClass="MagazineTableViewCell" customModule="Travel" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="487"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IB2-0n-Ai5" id="Wkm-WB-Zyj">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="223"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="487"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ALQ-yr-kYT">
-                                            <rect key="frame" x="32" y="23" width="329" height="177"/>
+                                            <rect key="frame" x="36" y="27" width="321" height="433"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CEg-Q4-t8v">
+                                                    <rect key="frame" x="0.0" y="0.0" width="321" height="321"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="CEg-Q4-t8v" secondAttribute="height" multiplier="1:1" id="dhP-Md-dQA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="107" translatesAutoresizingMaskIntoConstraints="NO" id="R1c-bi-OJo">
+                                                    <rect key="frame" x="0.0" y="337" width="321" height="80"/>
+                                                    <subviews>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sJq-G5-OfE">
+                                                            <rect key="frame" x="0.0" y="0.0" width="224.66666666666666" height="48.666666666666664"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyQ-ID-DmO">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="224.66666666666666" height="20.333333333333332"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Af-7M-oGl">
+                                                                    <rect key="frame" x="0.0" y="28.333333333333314" width="224.66666666666666" height="20.333333333333329"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="sJq-G5-OfE" firstAttribute="width" secondItem="R1c-bi-OJo" secondAttribute="width" multiplier="0.7" id="D6B-x2-wSP"/>
+                                                        <constraint firstItem="sJq-G5-OfE" firstAttribute="leading" secondItem="R1c-bi-OJo" secondAttribute="leading" id="vbg-U2-t5H"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oP8-w1-EPN">
+                                                    <rect key="frame" x="224.66666666666671" y="396.66666666666669" width="96.333333333333343" height="20.333333333333314"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="CEg-Q4-t8v" firstAttribute="leading" secondItem="ALQ-yr-kYT" secondAttribute="leading" id="MCX-iZ-pNA"/>
+                                                <constraint firstAttribute="bottom" secondItem="R1c-bi-OJo" secondAttribute="bottom" constant="16" id="WvD-WI-Cpc"/>
+                                                <constraint firstAttribute="trailing" secondItem="CEg-Q4-t8v" secondAttribute="trailing" id="agT-jV-4z6"/>
+                                                <constraint firstItem="R1c-bi-OJo" firstAttribute="leading" secondItem="ALQ-yr-kYT" secondAttribute="leading" id="e4W-tA-2HV"/>
+                                                <constraint firstItem="CEg-Q4-t8v" firstAttribute="top" secondItem="ALQ-yr-kYT" secondAttribute="top" id="imh-xS-OfV"/>
+                                                <constraint firstItem="oP8-w1-EPN" firstAttribute="width" secondItem="R1c-bi-OJo" secondAttribute="width" multiplier="0.3" id="j19-g7-KOy"/>
+                                                <constraint firstItem="R1c-bi-OJo" firstAttribute="top" secondItem="CEg-Q4-t8v" secondAttribute="bottom" constant="16" id="j2b-bL-jLz"/>
+                                                <constraint firstAttribute="trailing" secondItem="oP8-w1-EPN" secondAttribute="trailing" id="nrM-Oa-Gb3"/>
+                                                <constraint firstAttribute="trailing" secondItem="R1c-bi-OJo" secondAttribute="trailing" id="rE6-bq-Gt8"/>
+                                                <constraint firstAttribute="bottom" secondItem="oP8-w1-EPN" secondAttribute="bottom" constant="16" id="s1b-vR-x3S"/>
+                                            </constraints>
                                         </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="ALQ-yr-kYT" secondAttribute="bottom" constant="12" id="Fi6-Tj-kXD"/>
-                                        <constraint firstItem="ALQ-yr-kYT" firstAttribute="leading" secondItem="Wkm-WB-Zyj" secondAttribute="leadingMargin" constant="12" id="S4P-fH-dmD"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="ALQ-yr-kYT" secondAttribute="trailing" constant="12" id="mzU-iI-hQg"/>
-                                        <constraint firstItem="ALQ-yr-kYT" firstAttribute="top" secondItem="Wkm-WB-Zyj" secondAttribute="topMargin" constant="12" id="odF-PQ-wrN"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="ALQ-yr-kYT" secondAttribute="bottom" constant="16" id="Fi6-Tj-kXD"/>
+                                        <constraint firstItem="ALQ-yr-kYT" firstAttribute="leading" secondItem="Wkm-WB-Zyj" secondAttribute="leadingMargin" constant="16" id="S4P-fH-dmD"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="ALQ-yr-kYT" secondAttribute="trailing" constant="16" id="mzU-iI-hQg"/>
+                                        <constraint firstItem="ALQ-yr-kYT" firstAttribute="top" secondItem="Wkm-WB-Zyj" secondAttribute="topMargin" constant="16" id="odF-PQ-wrN"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cellView" destination="ALQ-yr-kYT" id="JWn-88-JK8"/>
+                                    <outlet property="dateLabel" destination="oP8-w1-EPN" id="fnn-Zz-gkg"/>
+                                    <outlet property="photoImageView" destination="CEg-Q4-t8v" id="Hek-Gu-o8p"/>
+                                    <outlet property="subtitleLabel" destination="3Af-7M-oGl" id="HRb-fp-Xb7"/>
+                                    <outlet property="titleLabel" destination="LyQ-ID-DmO" id="sWC-uD-zmC"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
