--- a/Travel/Base.lproj/Main.storyboard
+++ b/Travel/Base.lproj/Main.storyboard
@@ -17,50 +17,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="travelCell" rowHeight="487" id="IB2-0n-Ai5" customClass="MagazineTableViewCell" customModule="Travel" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="487"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="travelCell" rowHeight="550" id="IB2-0n-Ai5" customClass="MagazineTableViewCell" customModule="Travel" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="550"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IB2-0n-Ai5" id="Wkm-WB-Zyj">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="487"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="550"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ALQ-yr-kYT">
-                                            <rect key="frame" x="36" y="27" width="321" height="433"/>
+                                            <rect key="frame" x="36" y="27" width="321" height="496"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CEg-Q4-t8v">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="252" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CEg-Q4-t8v">
                                                     <rect key="frame" x="0.0" y="0.0" width="321" height="321"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="CEg-Q4-t8v" secondAttribute="height" multiplier="1:1" id="dhP-Md-dQA"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="107" translatesAutoresizingMaskIntoConstraints="NO" id="R1c-bi-OJo">
-                                                    <rect key="frame" x="0.0" y="337" width="321" height="80"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sJq-G5-OfE" userLabel="Title Stack View">
+                                                    <rect key="frame" x="0.0" y="337" width="224.66666666666666" height="143"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sJq-G5-OfE">
-                                                            <rect key="frame" x="0.0" y="0.0" width="224.66666666666666" height="48.666666666666664"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyQ-ID-DmO">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="224.66666666666666" height="20.333333333333332"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Af-7M-oGl">
-                                                                    <rect key="frame" x="0.0" y="28.333333333333314" width="224.66666666666666" height="20.333333333333329"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyQ-ID-DmO">
+                                                            <rect key="frame" x="0.0" y="0.0" width="224.66666666666666" height="67.666666666666671"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Af-7M-oGl">
+                                                            <rect key="frame" x="0.0" y="75.666666666666686" width="224.66666666666666" height="67.333333333333314"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
-                                                    <constraints>
-                                                        <constraint firstItem="sJq-G5-OfE" firstAttribute="width" secondItem="R1c-bi-OJo" secondAttribute="width" multiplier="0.7" id="D6B-x2-wSP"/>
-                                                        <constraint firstItem="sJq-G5-OfE" firstAttribute="leading" secondItem="R1c-bi-OJo" secondAttribute="leading" id="vbg-U2-t5H"/>
-                                                    </constraints>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oP8-w1-EPN">
-                                                    <rect key="frame" x="224.66666666666671" y="396.66666666666669" width="96.333333333333343" height="20.333333333333314"/>
+                                                    <rect key="frame" x="279.66666666666669" y="459.66666666666669" width="41.333333333333314" height="20.333333333333314"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -68,15 +59,14 @@
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
+                                                <constraint firstItem="sJq-G5-OfE" firstAttribute="leading" secondItem="ALQ-yr-kYT" secondAttribute="leading" id="4BD-IE-dqG"/>
+                                                <constraint firstItem="sJq-G5-OfE" firstAttribute="top" secondItem="CEg-Q4-t8v" secondAttribute="bottom" constant="16" id="JO4-sk-10d"/>
                                                 <constraint firstItem="CEg-Q4-t8v" firstAttribute="leading" secondItem="ALQ-yr-kYT" secondAttribute="leading" id="MCX-iZ-pNA"/>
-                                                <constraint firstAttribute="bottom" secondItem="R1c-bi-OJo" secondAttribute="bottom" constant="16" id="WvD-WI-Cpc"/>
+                                                <constraint firstAttribute="trailing" secondItem="oP8-w1-EPN" secondAttribute="trailing" id="PFM-zF-Fh5"/>
                                                 <constraint firstAttribute="trailing" secondItem="CEg-Q4-t8v" secondAttribute="trailing" id="agT-jV-4z6"/>
-                                                <constraint firstItem="R1c-bi-OJo" firstAttribute="leading" secondItem="ALQ-yr-kYT" secondAttribute="leading" id="e4W-tA-2HV"/>
                                                 <constraint firstItem="CEg-Q4-t8v" firstAttribute="top" secondItem="ALQ-yr-kYT" secondAttribute="top" id="imh-xS-OfV"/>
-                                                <constraint firstItem="oP8-w1-EPN" firstAttribute="width" secondItem="R1c-bi-OJo" secondAttribute="width" multiplier="0.3" id="j19-g7-KOy"/>
-                                                <constraint firstItem="R1c-bi-OJo" firstAttribute="top" secondItem="CEg-Q4-t8v" secondAttribute="bottom" constant="16" id="j2b-bL-jLz"/>
-                                                <constraint firstAttribute="trailing" secondItem="oP8-w1-EPN" secondAttribute="trailing" id="nrM-Oa-Gb3"/>
-                                                <constraint firstAttribute="trailing" secondItem="R1c-bi-OJo" secondAttribute="trailing" id="rE6-bq-Gt8"/>
+                                                <constraint firstItem="sJq-G5-OfE" firstAttribute="bottom" secondItem="oP8-w1-EPN" secondAttribute="bottom" id="ngY-Wj-QA9"/>
+                                                <constraint firstItem="sJq-G5-OfE" firstAttribute="width" secondItem="ALQ-yr-kYT" secondAttribute="width" multiplier="0.7" id="qte-hb-jJv"/>
                                                 <constraint firstAttribute="bottom" secondItem="oP8-w1-EPN" secondAttribute="bottom" constant="16" id="s1b-vR-x3S"/>
                                             </constraints>
                                         </view>
