--- a/Travel/Base.lproj/Main.storyboard
+++ b/Travel/Base.lproj/Main.storyboard
@@ -111,15 +111,21 @@ Gw
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="44o-0w-PZ6">
-                                <rect key="frame" x="76.666666666666686" y="305" width="240" height="242.33333333333337"/>
+                                <rect key="frame" x="76.666666666666686" y="288" width="240" height="276"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gQn-Ja-ZaU">
-                                        <rect key="frame" x="0.0" y="0.0" width="240" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="KLH-PE-oF1"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="textFieldDidOnExit:" destination="hiR-ad-49r" eventType="editingDidEndOnExit" id="kvb-rJ-46x"/>
+                                        </connections>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="rHu-oa-ZRp">
-                                        <rect key="frame" x="0.0" y="64" width="240" height="128"/>
+                                        <rect key="frame" x="0.0" y="74" width="240" height="128"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" systemColor="labelColor"/>
@@ -127,12 +133,19 @@ Gw
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tQL-KX-kef">
-                                        <rect key="frame" x="0.0" y="222" width="240" height="20.333333333333343"/>
+                                        <rect key="frame" x="0.0" y="232" width="240" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="1jd-x2-AGC"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="tQL-KX-kef" firstAttribute="top" secondItem="rHu-oa-ZRp" secondAttribute="bottom" constant="30" id="HN2-Iu-WBB"/>
+                                    <constraint firstItem="rHu-oa-ZRp" firstAttribute="top" secondItem="gQn-Ja-ZaU" secondAttribute="bottom" constant="30" id="lnD-OP-myS"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PO2-Ex-2dO"/>
@@ -143,6 +156,10 @@ Gw
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="fln-xT-QSN"/>
+                    <connections>
+                        <outlet property="numberTextField" destination="gQn-Ja-ZaU" id="oDe-Fk-R9u"/>
+                        <outlet property="resultTextView" destination="rHu-oa-ZRp" id="M3p-pV-JAu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MoE-oa-50f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
