feat(Game): Label에 총 박수 횟수 표시하는 로직 추가

--- a/Travel/Base.lproj/Main.storyboard
+++ b/Travel/Base.lproj/Main.storyboard
@@ -164,6 +164,7 @@ Gw
                     <navigationItem key="navigationItem" id="fln-xT-QSN"/>
                     <connections>
                         <outlet property="numberTextField" destination="gQn-Ja-ZaU" id="oDe-Fk-R9u"/>
+                        <outlet property="resultLabel" destination="tQL-KX-kef" id="q6P-YV-NZL"/>
                         <outlet property="resultTextView" destination="rHu-oa-ZRp" id="M3p-pV-JAu"/>
                     </connections>
                 </viewController>
